--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.dev.fnlibs">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,14 +12,30 @@
         android:roundIcon="@drawable/fnlibs_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.AndroidNotifications"/>
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".activities.AndroidNotifications.activities.ProfileActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".activities.AndroidNotifications.activities.AndroidNotifications"/>
+        <activity
+            android:name=".activities.SplashScreen"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.AndroidNotifications.activities.AndroidNotifications" />
+        <activity android:name=".activities.MainActivity" />
+
+        <service
+            android:name=".activities.AndroidNotifications.helperClasses.MyFirebaseMessagingService"
+            android:exported="false"
+            tools:ignore="MissingClass" >
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
