--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
     package="com.dev.fnlibs">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
 
     <application
         android:allowBackup="true"
@@ -12,7 +17,9 @@
         android:roundIcon="@drawable/fnlibs_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NotesWithRoomDB.Activities.ActivityNotes"/>
+        <activity android:name=".Bluetooth.BluetoothActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".NotesWithRoomDB.Activities.ActivityNotes" />
         <activity
             android:name=".AndroidNotifications.activities.ProfileActivity"
             android:parentActivityName=".AndroidNotifications.activities.AndroidNotifications"
